Add models to swagger, docs/book-lists endpoint
