# swagger.v0.1.json
@@ -20,12 +20,13 @@
     "/v0.1/book-lists/{type}/{date}": {
       "get": {
         "tags": [
+          "book-lists"
         ],
         "summary": "Get book-list by type, date",
         "description": "",
         "produces": [
-          "text\/xml",
-          "application\/json"
+          "text/xml",
+          "application/json"
         ],
         "parameters": [
           {
@@ -45,7 +46,10 @@
         ],
         "responses": {
           "200": {
-            "description": "Book List as json"
+            "description": "Book List as json",
+            "schema": {
+              "$ref": "#/definitions/BookList"
+            }
           },
           "500": {
             "description": "Error message in JSON format"
@@ -58,6 +62,117 @@
             ]
           }
         ]
+      }
+    }
+  },
+  "definitions": {
+    "BookList": {
+      "title": "BookList",
+      "type": "object",
+      "properties": {
+        "type": {
+          "type": "string",
+          "enum": [
+            "staff-picks",
+            "kids",
+            "teens"
+          ]
+        },
+        "date": {
+          "type": "string",
+          "example": "2017",
+          "description": "String representing the date of publication, with either year or month specificity"
+        },
+        "title": {
+          "description": "User facing name of list",
+          "type": "string",
+          "example": "Best Books for Teens 2017"
+        },
+        "slug": {
+          "type": "string",
+          "description": "Identifier for list unique across all list types. Conventionally composed of type and date",
+          "example": "staff-picks/2017-01"
+        },
+        "heroUrl": {
+          "type": "string",
+          "description": "URL of hero image"
+        },
+        "picks": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/BookListPick"
+          }
+        }
+      }
+    },
+    "BookListPick": {
+      "title": "Pick",
+      "type": "object",
+      "properties": {
+        "reviewerName": {
+          "type": "string",
+          "description": "Name of reviewer"
+        },
+        "reviewerLocation": {
+          "type": "string",
+          "description": "Location of reviewer",
+          "example": "Volunteers Office"
+        },
+        "text": {
+          "type": "string",
+          "description": "Text of review"
+        },
+        "tags": {
+          "type": "array",
+          "description": "0-many tags from controlled vocabulary",
+          "items": {
+            "type": "string"
+          }
+        },
+        "title": {
+          "type": "string",
+          "description": "title of book"
+        },
+        "author": {
+          "type": "string",
+          "description": "Name of author"
+        },
+        "illustrator": {
+          "type": "string",
+          "description": "Name of illustrator (opt)"
+        },
+        "translator": {
+          "type": "string",
+          "description": "Name of translator (opt)"
+        },
+        "publisher": {
+          "type": "string",
+          "description": "Name of publisher (opt)"
+        },
+        "catalogUrl": {
+          "type": "string",
+          "description": "Catalog link"
+        },
+        "ebookUrl": {
+          "type": "string",
+          "description": "E-book link"
+        },
+        "imageUrl": {
+          "type": "string",
+          "description": "Content Cafe link"
+        },
+        "ageGroup": {
+          "type": "string",
+          "description": "Named age group? (e.g. \"Adult\") (Appears in Staff Picks)"
+        },
+        "isbn": {
+          "type": "string",
+          "description": "Not sure where used. Appears in Staff Picks"
+        },
+        "overdriveId": {
+          "type": "string",
+          "description": "Overdrive ID"
+        }
       }
     }
   }
